--- a/src/Cocomo/Components/Pages/Home.razor
+++ b/src/Cocomo/Components/Pages/Home.razor
@@ -132,7 +132,7 @@
             <label for="Duration">Duration @DurationFormula</label>
             <div class="input-group mb-3">
             <input id="Duration" type="number" class="form-control" @bind-value="@Duration" disabled />
-                <span class="input-group-text">erson-months</span>
+                <span class="input-group-text">person-months</span>
             </div>            
         </div>
     </div>
